test/syc/bad/tagnotident.c
/*
 * If we try to refer to a tag where identifer is expected,
 * it should be not found.
 */

enum e {
	e1
};

int i = e;
